k8s/frontend/frontend-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  selector:
    app: frontend
  type: LoadBalancer
  ports:
    - port: 5173
      targetPort: 5173
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-c
          image: hoanglonguit2003/frontend:dev
          resources:
            limits:
              memory: 512Mi
              cpu: "0.25"
          ports:
            - containerPort: 5173
